--- a/scheduler/static/css/input_form.css
+++ b/scheduler/static/css/input_form.css
@@ -43,3 +43,16 @@
     color: white;
     box-shadow: none;
 }
+
+/* Custom switch */
+.custom-control-input:checked ~ .custom-control-label::before {
+    color: #fff;
+    border-color: #00a161;
+    background-color: #00a161;
+}
+.custom-switch .custom-control-label::after {
+    background-color: #424240;
+}
+.custom-control-label::before {
+    box-shadow: none !important;
+}
