--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -7,7 +7,7 @@
 {% block content %}
   <form method="post">
     {% csrf_token %}
-    <div class="jumbotron py-1 bg-scheduler-dark-2">
+    <div class="jumbotron py-1 bg-scheduler-dark-2 c-scheduler-light">
     <div class="form-group">
       {{ form.name.label_tag }}
       {{ form.name }}
