Improved schedule_manager functionality and tweaked templates

--- a/schedule_manager/templates/schedule_manager/activity_detail.html
+++ b/schedule_manager/templates/schedule_manager/activity_detail.html
@@ -19,4 +19,5 @@
   </div>
   <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-list' %}" role="button">Back to Activities</a>
   <a class="mt-2 btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:schedule-week' %}" role="button">Back to Schedule Week</a>
+  <a class="mt-2 btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-create' %}" role="button">Create another Activity</a>
 {% endblock %}
