--- a/scheduler/static/css/main.css
+++ b/scheduler/static/css/main.css
@@ -100,3 +100,7 @@ textarea {
 .bg-scheduler-high {
     background-color: yellow !important;
 }
+
+/*ul {*/
+/*    list-style-type: none !important;*/
+/*}*/
