--- a/scheduler/templates/base_generic.html
+++ b/scheduler/templates/base_generic.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-light bg-scheduler navbar-expand-lg">
+      <nav class="navbar navbar-light bg-scheduler navbar-expand-md">
         <a class="navbar-brand c-scheduler-dark-2" href="{% url 'index' %}"><img class="d-inline-block mr-1 align-bottom" src="{% static 'images/logo.png' %}" width="30" height="30" alt="logo"> Scheduler</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Navigation toggler">
           <span class="navbar-toggler-icon"></span>
@@ -32,19 +32,40 @@
         <div class="collapse navbar-collapse" id="mainmenu">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Start</a></li>
-
             {% if not user.is_authenticated %}
               <a class="nav-link" href="{% url 'login' %}">Login</a>
               <a class="nav-link" href="{% url 'django_registration:user-create' %}">Register</a>
             {% else %}
-              <a class="nav-link" href="{% url 'task_manager:task-list' %}">Tasks</a>
-              <a class="nav-link" href="{% url 'shoppinglist_manager:slist-list' %}">Shopping Lists</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">Treasure</a>
+                <div class="dropdown-menu" aria-labelledby="submenu">
+                  <a class="dropdown-item" href="{% url 'schedule_manager:activity-list' %}">Activities</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'task_manager:task-list' %}">Tasks</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'schedule_manager:schedule-week' %}">Schedule Week</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'shoppinglist_manager:slist-list' %}">Shopping Lists</a>
+                </div>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">Manage</a>
                 <div class="dropdown-menu" aria-labelledby="submenu">
-                  <a class="dropdown-item" href="{% url 'task_manager:task-create' %}">Create new Task</a>
+                  <a class="dropdown-item" href="{% url 'schedule_manager:activity-create' %}">Create Activity</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'shoppinglist_manager:slist-create' %}">Create new Shopping List</a>
+                  <a class="dropdown-item" href="{% url 'task_manager:task-create' %}">Create Task</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'shoppinglist_manager:slist-create' %}">Create Shopping List</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-danger" href="{% url 'schedule_manager:activity-delete-all' %}">Delete all Activities</a>
+                </div>
+              </li>
+            {% endif %}
+            {% if user.is_authenticated %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">Addons</a>
+                <div class="dropdown-menu" aria-labelledby="submenu">
+                  <a class="dropdown-item" href="{% url 'schedule_manager:activity-get-pollub' %}">Get Subjects from Pollub</a>
                 </div>
               </li>
             {% endif %}
@@ -75,7 +96,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">About creator</h1>
-            <p class="">Computer Science student at Lublin University of Technology who has started his first adventure with computers and programming in very youth years.</p>
+            <p class="font-weight-light">Computer Science student at Lublin University of Technology who has started his first adventure with computers and programming in very youth years.</p>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">Projects</h1>
