--- a/shoppinglist_manager/templates/shoppinglist_manager/shoppinglist_form.html
+++ b/shoppinglist_manager/templates/shoppinglist_manager/shoppinglist_form.html
@@ -9,6 +9,7 @@
     </div>
     <div class="form-group">
       <button type="submit" class="btn bg-scheduler c-scheduler-dark">Save</button>
+      <a class="btn btn-warning c-scheduler-dark" href="{% url 'shoppinglist_manager:slist-list' %}" role="button">Cancel</a>
     </div>
     </div>
   </form>
