--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -3,24 +3,23 @@
 {% block content %}
   {% if user.is_authenticated %}
     <div class="jumbotron mb-3 py-1 bg-scheduler-dark-2">
-      <h1 class="text-center">Welcome {{ request.user.username }}!</h1>
+      <h1 class="font-weight-light text-center">Welcome {{ request.user.username }}!</h1>
     </div>
-    <a class="btn mb-2 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
-    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
-    <hr class="my-3 bg-scheduler-dark-2">
-    <a class="btn mb-2 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-list' %}" role="button">Your Shopping Lists</a>
-    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-create' %}" role="button">Create Shopping List</a>
-    <hr class="my-3 bg-scheduler-dark-2">
     <a class="btn mb-2 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-list' %}" role="button">Your Activities</a>
-    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-create' %}" role="button">Create Activity</a>
-    <hr class="my-3 bg-scheduler-dark-2">
+    <a class="btn mb-5 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-create' %}" role="button">Create Activity</a>
+{#    <hr class="my-3 bg-scheduler-dark-2">#}
+    <a class="btn mb-2 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
+    <a class="btn mb-5 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
+{#    <hr class="my-3 bg-scheduler-dark-2">#}
+    <a class="btn mb-2 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-list' %}" role="button">Your Shopping Lists</a>
+    <a class="btn mb-5 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-create' %}" role="button">Create Shopping List</a>
+{#    <hr class="my-3 bg-scheduler-dark-2">#}
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:schedule-week' %}" role="button">Schedule Weeks</a>
     <div class="jumbotron py-1 bg-scheduler-dark-2">
-      <h2 class="text-center mb-3">Summary</h2>
-      <p class="text-center">You have <strong>{{ num_tasks }}</strong> task{% if num_tasks != 1 %}s{% endif %} on-going</p>
-      <p class="text-center">You have <strong>{{ num_active_slist }}</strong> active shopping list{% if num_active_slist != 1 %}s{% endif %}</p>
+      <h2 class="font-weight-light text-center mb-3">Summary</h2>
+      <p class="font-weight-light text-center">You have <strong>{{ num_tasks }}</strong> task{% if num_tasks != 1 %}s{% endif %} on-going</p>
+      <p class="font-weight-light text-center">You have <strong>{{ num_active_slist }}</strong> active shopping list{% if num_active_slist != 1 %}s{% endif %}</p>
     </div>
-
 
   {% else %}
     <div class="jumbotron py-3 mb-3 bg-scheduler-dark-2">
