--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -85,6 +85,7 @@
     </div>
     <div class="form-group">
       <button type="submit" class="btn bg-scheduler c-scheduler-dark">Save</button>
+      <a class="btn btn-warning c-scheduler-dark" href="{% if task %}{% url 'task_manager:task-detail' task.pk %}{% else %}{% url 'task_manager:task-list' %}{% endif %}" role="button">Cancel</a>
     </div>
     </div>
   </form>
