Improved schedule_manager functionality, tweaked templates and fixed mini bugs

--- a/schedule_manager/templates/schedule_manager/activity_list.html
+++ b/schedule_manager/templates/schedule_manager/activity_list.html
@@ -7,11 +7,11 @@
         <a class="list-group-item mb-3 bg-scheduler-dark-2 c-scheduler-white list-group-item-action" href="{{ act.get_absolute_url }}">
           <div class="d-flex w-100 justify-content-between">
             <h1 class="h5 mb-1">{{ act.name }}</h1>
-            <small class="{% if not act.status_active %}text-danger{% else %}c-scheduler-light{% endif %}">{{ act.date|date:'d M Y' }} ({{ act.get_week_day_name }})</small>
+            <small class="{% if not act.status_active %}text-danger{% else %}c-scheduler-light{% endif %}">{{ act.date|date:'d M Y' }} ({{ act.week_day_name }})</small>
           </div>
-          <small class="c-scheduler-light">{{ act.get_crispy_time }}</small>
+          <small class="c-scheduler-light">{{ act.crispy_time }}</small>
           <p class="my-0"><small class="c-scheduler-light">{{ act.description }}</small></p>
-          {% if act.repeat_weekly %}<p class="my-0 font-weight-light c-scheduler">Repeat every {{ act.get_week_day_name }}</p>{% endif %}
+          {% if act.repeat_weekly %}<p class="my-0 font-weight-light c-scheduler">Repeat every {{ act.week_day_name }}</p>{% endif %}
           {% if act.status_active %}<p class="my-0 font-weight-light text-success">Active</p>{% else %}<p class="my-0 font-weight-bold text-danger">Inactive</p>{% endif %}
         </a>
       {% endfor %}
