--- a/schedule_manager/templates/schedule_manager/activity_detail.html
+++ b/schedule_manager/templates/schedule_manager/activity_detail.html
@@ -5,7 +5,7 @@
     <h1 class="font-weight-light">{{ activity.name }}</h1>
     <p class="my-0 font-weight-light {% if not activity.status_active %}text-danger{% else %}c-scheduler-light{% endif %}">{{ activity.date|date:'d M Y' }} ({{ activity.week_day_name }})</p>
     <p class="mt-0 lead c-scheduler-light">{{ activity.crispy_time }}</p>
-    {% if activity.repeat_weekly %}<p class="my-0 font-weight-light c-scheduler">Repeat every {{ activity.week_day_name }}</p>{% endif %}
+    {% if activity.repeat_weekly %}<p class="my-0 font-weight-light text-success">Repeat every {{ activity.week_day_name }}</p>{% endif %}
     {% if activity.status_active %}<p class="my-0 ml-1 font-weight-light text-success">Active</p>{% else %}<p class="ml-1 my-0 font-weight-bold text-danger">Inactive</p>{% endif %}
     <hr class="mb-4 mt-0 bg-scheduler-dark-3">
     <p class="my-0 c-scheduler-light">{{ activity.description }}</p>
