--- a/scheduler/static/css/main.css
+++ b/scheduler/static/css/main.css
@@ -5,6 +5,7 @@ body {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 17px;
+    background-attachment: fixed;
 }
 main .container {
     max-width: 600px;
