Changed about section

--- a/scheduler/templates/base_generic.html
+++ b/scheduler/templates/base_generic.html
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">About creator</h1>
-            <p class="font-weight-light">Computer Science student at Lublin University of Technology who has started his first adventure with computers and programming in very youth years.</p>
+            <p class="font-weight-light">Full of passion Computer Science Student with analytical mindset. Always wanting to explain more difficult subjects to academic colleagues and open to the comments of others. Currently learning new technologies related to web development.</p>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6">
             <h1 class="h2 my-3">Projects</h1>
