Fixed dvi typo (should be div)

--- a/schedule_manager/templates/schedule_manager/scheduleweek.html
+++ b/schedule_manager/templates/schedule_manager/scheduleweek.html
@@ -20,7 +20,7 @@
         {{ form.week_shift }}
         <button id="current-week-btn" type="submit" class="btn bg-scheduler c-scheduler-dark btn-lg w-100">Show current week</button>
       </div>
-      <dvi class="form-group">
+      <div class="form-group">
         <div class="form-row">
           <div class="col-6">
             <button id="previous-week-btn" type="submit" class="btn bg-scheduler c-scheduler-dark w-100">Previous week</button>
@@ -29,7 +29,7 @@
             <button id="next-week-btn" type="submit" class="btn bg-scheduler c-scheduler-dark w-100">Next week</button>
           </div>
         </div>
-      </dvi>
+      </div>
     </div>
   </form>
   {% if week_days %}
